--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -25,6 +25,9 @@ RUN printf "\n" | pecl install imagick
 RUN docker-php-ext-enable imagick
 
 
+RUN docker-php-ext-install mysqli pdo pdo_mysql && docker-php-ext-enable pdo_mysql
+
+
 COPY .docker/vhost.conf /etc/apache2/sites-available/000-default.conf
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
